made some changes in index.scss to fix some minor issues caused by making nav sticky and made it align to the same layout as UserProfile.php

--- a/index.scss
+++ b/index.scss
@@ -34,7 +34,7 @@ body{
     @include centering-container;
     max-width: 600px;
     margin: 0 auto;
-    padding: 30px;
+    padding: 0 30px 30px 30px;
     .user-header {
       padding-top: 10px;
       text-align: left;
